--- a/res/layout/activity_timer.xml
+++ b/res/layout/activity_timer.xml
@@ -41,6 +41,11 @@
             android:clickable="true" />
     </LinearLayout>
 
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"></TableLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
